--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,3 @@
-<h2>Welcome to scheduled tweets</h2>
+<div class="d-flex align-items-center justify-content-center">   
+    <h2>Welcome to scheduled tweets</h2>
+</div>
