--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -14,6 +14,6 @@
         <%= form.password_field :password_confirmation, class: "form-control" %>
     </div>
     <div class="mb-3">
-        <%= form.submit class: "btn btn-primary" %>
+        <%= form.submit "Sign up" class: "btn btn-primary" %>
     </div>
 <% end %>
