--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,16 @@
 <h2>Sign up</h2>
-<%= form_with model: @user, url: sign_up_path do |form| %>
+<%= form_with model: @user, url: sign_up_path, data: { turbo: false } do |form| %>
+
+    <% if @user.errors.any? %>
+        <div  class="alert alert-danger">
+            <% @user.errors.full_messages.each do |message| %>
+                <div><%= message %></div>
+            <% end %>
+
+        </div>
+    <% end %>
+
+
     <div class="mb-3">
         <%= form.label :email %>
         <%= form.text_field :email, class: "form-control", password: "nastya@gmail.com" %>
@@ -14,6 +25,6 @@
         <%= form.password_field :password_confirmation, class: "form-control" %>
     </div>
     <div class="mb-3">
-        <%= form.submit "Sign up" class: "btn btn-primary" %>
+        <%= form.submit class: "btn btn-primary" %>
     </div>
 <% end %>
