--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,8 @@
 <div class="d-flex align-items-center justify-content-center">   
     <h2>Welcome to scheduled tweets</h2>
-
-    <% if @user %>
-        Logged in as: <%= @user.email %>
-    <% end %>
 </div>
+
+<% if @user %>
+    Logged in as: <%= @user.email %>
+    <%= button_to "Logout", logout_path, method: :delete %>
+<% end %>
