--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,5 +4,5 @@
 
 <% if @user %>
     Logged in as: <%= @user.email %>
-    <%= button_to "Logout", logout_path, method: :delete %>
+    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-secondary" %>
 <% end %>
