--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,7 +1,7 @@
-<h2>Sign up</h2>
-<%= form_with model: @user, url: sign_up_path, data: { turbo: false } do |form| %>
+<h2>Edit password</h2>
+<%= form_with model: Current.user, url: edit_password_path, data: { turbo: false } do |form| %>
 
-    <% if form.object..errors.any? %>
+    <% if form.object.errors.any? %>
         <div  class="alert alert-danger">
             <% form.object.errors.full_messages.each do |message| %>
                 <div><%= message %></div>
@@ -9,11 +9,6 @@
         </div>
     <% end %>
 
-
-    <div class="mb-3">
-        <%= form.label :email %>
-        <%= form.text_field :email, class: "form-control", password: "nastya@gmail.com" %>
-    </div>
     <div class="mb-3">
         <%= form.label :password %>
         <%= form.password_field :password, class: "form-control" %>
@@ -23,7 +18,8 @@
         <%= form.label :password_confirmation %>
         <%= form.password_field :password_confirmation, class: "form-control" %>
     </div>
+
     <div class="mb-3">
-        <%= form.submit class: "btn btn-primary" %>
+        <%= form.submit "Update password" , class: "btn btn-primary" %>
     </div>
 <% end %>
