--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", sign_in_path, class: "nav-link" %>
+          <%= link_to "Sign In", sign_in_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
