--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,3 +2,5 @@
     <h2>Welcome to scheduled tweets</h2>
 </div>
 
+
+<%= button_to "Connect Twitter", "/auth/twitter", method: :post, class: "btn btn-primary" %>
