--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,10 @@
         </li>
         <li class="nav-item">
           <%# <a class="nav-link" href="/about">About</a> %>
+          <%= link_to "Twitter Accounts", twitter_accounts_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%# <a class="nav-link" href="/about">About</a> %>
           <%= link_to "About", about_path, class: "nav-link" %>
         </li>
       </ul>
