--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <%= link_to "Tweets", tweets_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%# <a class="nav-link" href="/about">About</a> %>
