--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,13 +1,7 @@
 <h2>Sign up</h2>
 <%= form_with model: @user, url: sign_up_path, data: { turbo: false } do |form| %>
 
-    <% if form.object.errors.any? %>
-        <div  class="alert alert-danger">
-            <% form.object.errors.full_messages.each do |message| %>
-                <div><%= message %></div>
-            <% end %>
-        </div>
-    <% end %>
+    <%= render "shared/form_errors", form: form %>
 
 
     <div class="mb-3">
